#TUS-4-T-2 CulturalSiteCategory CRUD operations
Created basic CRUD operations for CulturalSiteCategory entity.

--- a/serbioneer/src/main/resources/application.properties
+++ b/serbioneer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Spring DataSource
+# Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
@@ -7,10 +7,10 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 ##################
-#JPA-Hibernate
+# JPA-Hibernate
 ##################
 
-#Prikazuj SQL upite koje JPA generise
+# Prikazuj SQL upite koje JPA generise
 spring.jpa.show-sql=true
 
 # Hibernate ddl-auto:
@@ -20,6 +20,8 @@ spring.jpa.show-sql=true
 #	create-drop: dropuje semu kada se aplikacija zaustavi
 spring.jpa.hibernate.ddl-auto=create-drop
 
-#Omogucava Hibernate-u da generise SQL koji je optimiyovan za odredjeni DBMS
+# Omogucava Hibernate-u da generise SQL koji je optimiyovan za odredjeni DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
+# Omogucava prikaz custom greske koja se prosledjuje sa back-a
+server.error.include-message = always
