#TUS-4-T-6 Implement Image upload

--- a/serbioneer/src/main/resources/application.properties
+++ b/serbioneer/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 
 # Omogucava prikaz custom greske koja se prosledjuje sa back-a
 server.error.include-message = always
+
+
+spring.http.multipart.max-file-size = -1
+
+spring.http.multipart.max-request-size = -1
