#TUS-4-T-1, #TUS-4-T-2, #TUS-4-T-12, #TUS-5-T-4
#TUS-4-T-1 Added Pagination and DTO Validation
#TUS-4-T-2 Added Pagination and DTO Validation
#TUS-4-T-3 Everything that came to mind
#TUS-4-T-12 New requests added
#TUS-4-T-13 CulturalSiteDTO validated
#TUS-5-T-4 Methods annotated

--- a/serbioneer/src/main/resources/application.properties
+++ b/serbioneer/src/main/resources/application.properties
@@ -26,7 +26,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 # Omogucava prikaz custom greske koja se prosledjuje sa back-a
 server.error.include-message = always
 
-
-spring.http.multipart.max-file-size = -1
-
-spring.http.multipart.max-request-size = -1
+# Omogucava upload slike vece od 1MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
