#TUS-9-T-1 Generate packages and files

--- a/serbioneer/pom.xml
+++ b/serbioneer/pom.xml
@@ -73,6 +73,16 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<!-- H2 dependency -->
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		
+		<!-- H2 dependency -->
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
