--- a/serbioneer/pom.xml
+++ b/serbioneer/pom.xml
@@ -93,6 +93,8 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
