--- a/serbioneer/pom.xml
+++ b/serbioneer/pom.xml
@@ -83,11 +83,14 @@
 		
 		<!-- H2 dependency -->
 		
+		<!-- Lombok dependency -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- Lombok dependency -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
