Fix bug where tests save images to src/main/images folder

--- a/serbioneer/src/main/resources/application.properties
+++ b/serbioneer/src/main/resources/application.properties
@@ -43,3 +43,6 @@ spring.messages.cache-duration= # Loaded resource bundle files cache duration. W
 spring.messages.encoding=UTF-8 # Message bundles encoding.
 spring.messages.fallback-to-system-locale=true # Whether to fall back to the system Locale if no files for a specific Locale have been found.
 spring.messages.use-code-as-default-message=false
+
+
+image.folder=main
