--- a/serbioneer/src/test/resources/test.properties
+++ b/serbioneer/src/test/resources/test.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.path=/h2
+
+image.folder=test
