--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "bootstrap": "^4.5.3",
+    "ngx": "^2.4.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
