--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.5.3",
     "ngx": "^2.4.0",
     "ngx-toastr": "^13.2.0",
