--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.3",
+    "@angular/animations": "^11.0.7",
     "@angular/cdk": "^11.0.3",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
