--- a/serbioneer/pom.xml
+++ b/serbioneer/pom.xml
@@ -103,6 +103,13 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+		<!-- Selenium for e2e testing-->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-server</artifactId>
+			<version>3.141.59</version>
+		</dependency>
     </dependencies>
 
 	<build>
