--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -23,7 +23,8 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "@auth0/angular-jwt": "^5.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.1",
+    "@ncstate/sat-popover": "^7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.2",
     "bootstrap": "^4.5.3",
     "ngx": "^2.4.0",
     "ngx-toastr": "^13.2.0",
