--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -26,7 +26,9 @@
     "@ncstate/sat-popover": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.2",
     "bootstrap": "^4.5.3",
+    "ng-image-slider": "^2.6.4",
     "ngx": "^2.4.0",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
