--- a/serbioneer-front/angular.json
+++ b/serbioneer-front/angular.json
@@ -34,6 +34,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css",
+              "./node_modules/ol/ol.css",
               "src/styles.sass"
             ],
             "scripts": []
