--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -30,6 +30,7 @@
     "ngx": "^2.4.0",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^13.2.0",
+    "ol": "^6.5.0",
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.0.0",
@@ -41,6 +42,7 @@
     "@angular/compiler-cli": "~11.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/ol": "^6.4.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
