--- a/serbioneer-front/angular.json
+++ b/serbioneer-front/angular.json
@@ -70,6 +70,8 @@
           }
         },
         "serve": {
+          "sslKey": "./keystore.jks",
+          "sslCert": "./myCertificate.crt",
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "serbioneer:build"
