--- a/serbioneer/src/main/resources/application.properties
+++ b/serbioneer/src/main/resources/application.properties
@@ -46,3 +46,16 @@ spring.messages.use-code-as-default-message=false
 
 
 image.folder=main
+
+
+#SSL Key Info
+security.require-ssl=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=src/main/resources/keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+
+#trust store location
+trust.store=src/main/resources/keystore.jks
+#trust store password
+trust.store.password=password
