--- a/serbioneer/src/test/resources/test.properties
+++ b/serbioneer/src/test/resources/test.properties
@@ -9,3 +9,15 @@ spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.path=/h2
 
 image.folder=test
+
+#SSL Key Info
+security.require-ssl=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=src/main/resources/keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+
+#trust store location
+trust.store=src/main/resources/keystore.jks
+#trust store password
+trust.store.password=password
