--- a/serbioneer-front/package.json
+++ b/serbioneer-front/package.json
@@ -25,9 +25,11 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@ncstate/sat-popover": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.2",
+    "@types/googlemaps": "^3.43.2",
     "bootstrap": "^4.5.3",
     "ng-image-slider": "^2.6.4",
     "ngx": "^2.4.0",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^13.2.0",
     "ol": "^6.5.0",
